--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,5 @@
 .jumbotron {
-  background-image: url("frappuccino.jpg");
+  background-image: url("img/constructionBuilding.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
